Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-57666

PathSvg doesn't work with PathAnimation

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.9.0 Beta 2
    • 5.7.0
    • None
    • Windows 10 x64
      Qt 5.7 MinGW

      Suppose we have the following code:

      Rectangle {
              id: rect
              width: 50
              height: 50
              x: 100
              y: 100
              color: "orange"
          }
      
          PathAnimation {
              target: rect
              duration: 5000
              running: true
              path: Path {
                  startX: 100
                  startY: 100
                  PathSvg {
                      path: "M 100 100 L 300 100 L 200 300 z"
                  }
              }
          }

      The PathSvg doesn't work in this case. Replacing that with one of other path segments like PathLine, PathQuad etc. works fine.
      Adding

      QT += svg
      or QTPLUGIN += qsvg

      doesn't solve the problem.
      The code doesn't produce any error / warning message.

        For Gerrit Dashboard: QTBUG-57666
        # Subject Branch Project Status CR V

            wearyinside Oleg Yadrov
            folibis ruslan
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes